Fri Mar 26 15:06:06 UTC 2010  Steve Huston  <shuston@smokey.mro.riverace.com>

        Pulled these fixes from the dev stream:

        Fri Mar 26 14:07:55 UTC 2010  Steve Huston  <shuston@riverace.com>

        * ace/Dev_Poll_Reactor.{h inl cpp}: Refinements to the way notifies
          are handled:
            1. The notify handler was being dispatched multiple times per
               notify; this has been fixed, which increases performance.
            2. Notifications are now dispatched in only one thread at a time.
               This brings more parity to the way notifies are handled in
               other reactor implementations.

        Fri Mar 19 16:52:08 UTC 2010  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * tests/MT_NonBlocking_Connect_Test.cpp:
          And another attempt to workaround WFMO reactor. The previous
          changes could break the test on other platforms.

        Fri Mar 19 16:16:30 UTC 2010  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * tests/MT_NonBlocking_Connect_Test.cpp:
          Fixed a typo in previous commit.

        Fri Mar 19 15:58:52 UTC 2010  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * tests/MT_NonBlocking_Connect_Test.cpp:
          Fixed a test on Windows for WFMO reactor which doesn't support
          work_pending() function.

        Wed Mar 17 11:58:10 UTC 2010  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        Committed the changes that I had to revert before x.7.7.

        * ace/Strategies_T.cpp:
          Changed the code so that close() is called in case of failure
          instead of destroy().

        * ace/Connector.cpp:
        * ace/Connector.h:
          Changed the fix for bug#3731. Now NBCH adds a reference in
          constructor and removes it in destructor if the SVC_HANDLER that
          it owns is reference counted. This is a cleaner solution than the
          one used before.

        * tests/NonBlocking_Conn_Test.h: